[package]
name = "core"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
hex = "0.4"
web3 = "0.18.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
tiny-keccak = "2.0.2"
hex-literal = "0.3.4"
serde = "1.0.145"
serde_json = "1.0.86"
bson = { version = "2.4", features = [
    "chrono-0_4",
] } # Needed for using chrono datetime in doc
chrono = "0.4.22" # Used for setting DateTimes
clap = { version = "4.0", features = ["derive"] }
rustc-hex = "2.1.0"
num = "0.4.0"
surrealdb = "1.0.0-beta.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
